@@ -49,6 +49,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'com.h2database:h2'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // OpenAPI
@@ -88,4 +89,5 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
     systemProperty "spring.profiles.active", "test"
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
